# invenio-previewer

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .travis.yml  AUTHORS.rst  CHANGES.rst  CONTRIBUTING.rst  INSTALL.rst  LICENSE  MANIFEST.in  README.rst  RELEASE-NOTES.rst  pyproject.toml  pytest.ini  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-pull.yml  i18n-push.yml  pypi-publish.yml  tests.yml
.tx/: config
docs/: api.rst  authors.rst  changes.rst  conf.py  contributing.rst  index.rst  installation.rst  license.rst  requirements.txt  usage.rst
examples/: app-setup.sh  app-teardown.sh  app.py  requirements.txt
examples/data/: csvfile.csv  markdown.md
examples/demo_files/: epubfile.epub  jsonfile.json  markdown.md
examples/templates/: index.html
invenio_previewer/: __init__.py  _compat.py  api.py  bundles.py  config.py  ext.py  proxies.py  registry.py  tasks.py  utils.py  version.py  views.py  webpack.py
invenio_previewer/assets/bootstrap3/js/: pdfjs.js  previewer_theme.js
invenio_previewer/assets/bootstrap3/js/csv_previewer/: csv_d3js.js
invenio_previewer/assets/bootstrap3/js/invenio_previewer/: epub.js  geojson.js  previewer_theme.js  prismjs.js
invenio_previewer/assets/bootstrap3/js/pdfjs/: viewer.js
invenio_previewer/assets/bootstrap3/scss/invenio_previewer/: geojson.scss  pdfjs.scss  prismjs.scss  simple_image.scss  style.scss  web_archive.scss
invenio_previewer/assets/css/invenio_previewer/: theme.scss
invenio_previewer/assets/js/csv_previewer/: loader.js
invenio_previewer/assets/js/invenio_previewer/: app.js
invenio_previewer/assets/js/invenio_previewer/csv_previewer/: index.js
invenio_previewer/assets/js/invenio_previewer/pdfjs/: index.js  viewer.js
invenio_previewer/assets/scss/: style.scss
invenio_previewer/assets/semantic-ui/js/invenio_previewer/: bottom.js  geojson.js  open_pdf.js  previewer_theme.js  prismjs.js  videojs.js
invenio_previewer/assets/semantic-ui/scss/invenio_previewer/: audio_videojs.scss  bottom.scss  geojson.scss  (+8 more)
invenio_previewer/extensions/: __init__.py  audio_videojs.py  csv_dthreejs.py  csv_papaparsejs.py  default.py  epub.py  ipynb.py  json_prismjs.py  mistune.py  pdfjs.py  showdown.py  simple_image.py  simple_video.py  tar.py  txt.py  video.py  video_videojs.py  web_archive.py  xml_prismjs.py  zip.py
invenio_previewer/previewerext/: __init__.py  csv_dthreejs.py  default.py  gview.py  mistune.py  pdfjs.py  pdftk.py  zip.py
invenio_previewer/static/css/: pdfjs.css
invenio_previewer/static/css/pdfjs/: viewer.css
invenio_previewer/static/css/video/: video.css
invenio_previewer/static/js/: fullscreen.js  open_pdf.js
invenio_previewer/static/js/csv_previewer/: csv_d3js.js  init.js  loader.js
invenio_previewer/static/js/pdfjs/: open_pdf.js  pdf_viewer.js  viewer.js
invenio_previewer/static/js/replay/: sw.js  ui.js
invenio_previewer/static/js/showdown/: showdown.js
invenio_previewer/static/js/zip/: fullscreen.js
invenio_previewer/templates/invenio_previewer/: _macros.html  abstract_previewer.html  base.html  bottom.html  csv_bar.html  default.html  epub.html  ipynb.html  json_prismjs.html  macros.html  mistune.html  pdfjs.html  showdown.html  simple_image.html  simple_video.html  top.html  txt.html  video.html  web_archive.html  xml_prismjs.html  zip.html
invenio_previewer/templates/semantic-ui/invenio_previewer/: abstract_previewer.html  audio_videojs.html  base.html  bottom.html  csv_bar.html  default.html  geojson.html  ipynb.html  json_prismjs.html  macros.html  mistune.html  pdfjs.html  simple_image.html  top.html  txt.html  videojs.html  web_archive.html  xml_prismjs.html  zip.html
invenio_previewer/translations/: invenio.pot  messages.pot
invenio_previewer/translations/af/LC_MESSAGES/: messages.po
invenio_previewer/translations/ar/LC_MESSAGES/: messages.po
invenio_previewer/translations/bg/LC_MESSAGES/: messages.po
invenio_previewer/translations/ca/LC_MESSAGES/: messages.po
invenio_previewer/translations/cs/LC_MESSAGES/: messages.po
invenio_previewer/translations/da/LC_MESSAGES/: messages.po
invenio_previewer/translations/de/LC_MESSAGES/: messages.po
invenio_previewer/translations/el/LC_MESSAGES/: messages.po
invenio_previewer/translations/es/LC_MESSAGES/: messages.po
invenio_previewer/translations/et/LC_MESSAGES/: messages.po
invenio_previewer/translations/et_EE/LC_MESSAGES/: messages.po
invenio_previewer/translations/fa/LC_MESSAGES/: messages.po
invenio_previewer/translations/fi/LC_MESSAGES/: messages.po
invenio_previewer/translations/fr/LC_MESSAGES/: messages.po
invenio_previewer/translations/gl/LC_MESSAGES/: messages.po
invenio_previewer/translations/hr/LC_MESSAGES/: messages.po
invenio_previewer/translations/hu/LC_MESSAGES/: messages.po
invenio_previewer/translations/it/LC_MESSAGES/: messages.po
invenio_previewer/translations/ja/LC_MESSAGES/: messages.po
invenio_previewer/translations/ka/LC_MESSAGES/: messages.po
invenio_previewer/translations/ko/LC_MESSAGES/: messages.po
invenio_previewer/translations/lt/LC_MESSAGES/: messages.po
invenio_previewer/translations/no/LC_MESSAGES/: messages.po
invenio_previewer/translations/pl/LC_MESSAGES/: messages.po
invenio_previewer/translations/pt/LC_MESSAGES/: messages.po
invenio_previewer/translations/ro/LC_MESSAGES/: messages.po
invenio_previewer/translations/ru/LC_MESSAGES/: messages.po
invenio_previewer/translations/rw/LC_MESSAGES/: messages.po
invenio_previewer/translations/sk/LC_MESSAGES/: messages.po
invenio_previewer/translations/sv/LC_MESSAGES/: messages.po
invenio_previewer/translations/tr/LC_MESSAGES/: messages.po
invenio_previewer/translations/uk/LC_MESSAGES/: messages.po
invenio_previewer/translations/zh-Hant/LC_MESSAGES/: messages.po
invenio_previewer/translations/zh_CN/LC_MESSAGES/: messages.po
invenio_previewer/translations/zh_TW/LC_MESSAGES/: messages.po
tests/: conftest.py  test_invenio_previewer.py  test_invenio_previewer_ext.py  test_invenio_previewer_views.py  test_macros.py  test_utils.py  test_views.py
(+11 files in other folders)
