# -*- coding: utf-8 -*-
#
# This file is part of Invenio.
# Copyright (C) 2016-2020 CERN.
# Copyright (C) 2022 Graz University of Technology.
#
# Invenio is free software; you can redistribute it and/or modify it
# under the terms of the MIT License; see LICENSE file for more details.

[metadata]
name = invenio-previewer
version = attr: invenio_previewer.__version__
description = "Invenio module for previewing files."
long_description = file: README.rst, CHANGES.rst
keywords = invenio previewer
license = MIT
author = CERN
author_email = info@inveniosoftware.org
platforms = any
url = https://github.com/inveniosoftware/invenio-previewer
classifiers =
    Development Status :: 5 - Production/Stable

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
zip_safe = False
install_requires =
    cchardet>=1.0.0
    invenio-assets>=1.2.7
    invenio-base>=1.2.10
    invenio-formatter>=1.1.3
    invenio-i18n>=1.3.1
    invenio-pidstore>=1.2.3
    invenio-records-ui>=1.2.0
    ipython>=4.1.0
    mistune>=0.8.1
    nbconvert>=6.0,<7.0
    nbclient>=0.5,<1.0
    nbformat>=5.1,<6.0
    tornado>=6.1,<7.0

[options.extras_require]
tests =
    pytest-black>=0.3.0,<0.3.10
    invenio-config>=1.0.3
    invenio-theme>=1.3.20
    invenio-db[versioning]>=1.0.14
    mock>=1.3.0
    pytest-invenio>=1.4.5
    Sphinx>=4.2.0,<5.0.0
    invenio-files-rest>=1.3.2
    invenio-records-files>=1.2.1
# Kept for backwards compatibility
docs =
files =

[options.entry_points]
invenio_base.apps =
    invenio_previewer = invenio_previewer:InvenioPreviewer
invenio_i18n.translations =
    messages = invenio_previewer
invenio_assets.webpack =
    invenio_previewer_theme = invenio_previewer.webpack:previewer
invenio_previewer.previewers =
    csv_dthreejs = invenio_previewer.extensions.csv_dthreejs
    json_prismjs = invenio_previewer.extensions.json_prismjs
    simple_image = invenio_previewer.extensions.simple_image
    xml_prismjs = invenio_previewer.extensions.xml_prismjs
    mistune = invenio_previewer.extensions.mistune
    txt = invenio_previewer.extensions.txt
    pdfjs = invenio_previewer.extensions.pdfjs
    zip = invenio_previewer.extensions.zip
    ipynb = invenio_previewer.extensions.ipynb
    default = invenio_previewer.extensions.default

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[bdist_wheel]
universal = 1

[compile_catalog]
directory = invenio_previewer/translations/

[extract_messages]
copyright_holder = CERN
msgid_bugs_address = info@inveniosoftware.org
mapping-file = babel.ini
output-file = invenio_previewer/translations/messages.pot
add-comments = NOTE

[init_catalog]
input-file = invenio_previewer/translations/messages.pot
output-dir = invenio_previewer/translations/

[pydocstyle]
add_ignore = D401

[update_catalog]
input-file = invenio_previewer/translations/messages.pot
output-dir = invenio_previewer/translations/

[isort]
profile=black

[tool:pytest]
addopts = --black --isort --pydocstyle --cov=invenio_previewer --cov-report=term-missing
testpaths = tests invenio_previewer
